crates/fossil-codegen/tests/snapshots/codegen_calls__anon_hash_sha256_builtin.snap
---
source: crates/fossil-codegen/tests/codegen_calls.rs
expression: sql_for(5)
---
CREATE VIEW users AS
SELECT * FROM read_csv_auto('examples/users.csv', sample_size=-1);
COPY (
    SELECT
        users.id AS subject,
        'https://example.org/value' AS predicate,
        sha256(users.raw) AS object
    FROM users
) TO 'output.parquet' (FORMAT PARQUET);
