crates/fossil-codegen/tests/snapshots/codegen_calls__clean_strip_html_udf_marker.snap
---
source: crates/fossil-codegen/tests/codegen_calls.rs
expression: sql_for(14)
---
CREATE VIEW users AS
SELECT * FROM read_csv_auto('examples/users.csv', sample_size=-1);
COPY (
    SELECT
        users.id AS subject,
        'https://example.org/value' AS predicate,
        fossil_strip_html(users.raw) AS object
    FROM users
) TO 'output.parquet' (FORMAT PARQUET);
