crates/fossil-codegen/tests/snapshots/codegen_calls__parse_integer_cast_inline.snap
---
source: crates/fossil-codegen/tests/codegen_calls.rs
expression: sql_for(6)
---
CREATE VIEW users AS
SELECT * FROM read_csv_auto('examples/users.csv', sample_size=-1);
COPY (
    SELECT
        users.id AS subject,
        'https://example.org/value' AS predicate,
        CAST(users.raw AS BIGINT) AS object
    FROM users
) TO 'output.parquet' (FORMAT PARQUET);
